Added like functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,9 @@
     {% block content %} content here {% endblock %}
   </div>
 
+  <script src="http://unpkg.com/jquery"></script>
+  <script src="https://unpkg.com/axios/dist/axios.js"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 
 </html>
