Added map view and 404 page

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     href="https://unpkg.com/bootswatch@4/dist/journal/bootstrap.css">
   <script src="https://unpkg.com/jquery"></script>
   <script src="https://unpkg.com/bootstrap"></script>
+  <link rel="icon" href="http://sohme.com/wp-content/uploads/2015/07/blue.png">
 
   <title>{% block title %} title goes here {% endblock %}</title>
 </head>
