--- a/templates/cafe/list.html
+++ b/templates/cafe/list.html
@@ -33,9 +33,10 @@
   {% endfor %}
 
 </div>
-
-<div class="mt-3">
-  <a href="/cafes/add" class="btn btn-outline-primary">Add a Cafe</a>
-</div>
+{% if g.user and g.user.admin %}
+  <div class="mt-3">
+    <a href="/cafes/add" class="btn btn-outline-primary">Add a Cafe</a>
+  </div>
+{% endif %}
 
 {% endblock %}
